# permit-to-proof

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  evaluate.py  pyproject.toml  requirements.txt  run.bat  run.sh
.streamlit/: config.toml
annotation/: PROTOCOL.md  gold_template.csv
app/: __init__.py  main.py  ui_theme.py
app/core/: __init__.py  ingest.py  pipeline.py  schema.py  score.py  verify.py
app/eval/: __init__.py  agreement.py  annotate.py  gold.py  metrics.py  report.py
app/llm/: __init__.py  base.py  mock.py  ollama_backend.py  openai_backend.py
app/pages/: 2_Evaluation.py
docs/: domain_knowledge.md  methodology.md
sample_data/: make_sample_permit.py
sample_data/gold/: README.md  sample_permit.json
tests/: conftest.py  test_annotation.py  test_app.py  test_backends.py  test_eval.py  test_pipeline.py  test_schema.py  test_score.py  test_verify.py
